# gentle-vanguard

./: .clineignore  .clinerules  .clinerules.optimized  .codeiumignore  .cursorrules  .env.example  .env.local.example  .eslintrc.json  .gga  .gitattributes  .gitignore  .gitleaks.toml  .lefthook.yml  .markdownlint.json  .npmrc  .orchestrator-active  .prettierignore  .secretlintignore  .trivyignore  AGENTS.md  AI-MANDATORY-BEHAVIOR.md  ANTIGRAVITY.md  CHANGELOG.md  CLAUDE.compressed.md  CLAUDE.md  CLEANUP-AND-VALIDATION.md  CLIENT-OPTIMIZATION-ACTIVATION.md  CLINE-CONTEXT-AUDIT.md  CLINE-OPTIMIZATION-GUIDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENGRAM-KNOWLEDGE-BASE.md  FINAL-DELIVERY-CHECKLIST.md  FOUNDATION-CLI-QUICKSTART.md  GIT-DEPLOYMENT-GUIDE.md  GV-CLI-QUICKSTART.md  IMPLEMENTATION-COMPLETE-REPORT.md  IMPLEMENTATION-LOG.md  IMPLEMENTATION-PHASES-SUMMARY.md  (+44 more)
.antigravity/: config.json
.atl/: skill-registry.md
.cline/: config.json
.codex/: config.json  config.toml
.continue/: config.json
.cursor/: config.json
.engram/: manifest.json  session-2026-04-23-02-lessons.md
.engram-data/: parallel-execution-limits-implementation.md
.event-bus/: history.json  subscriptions.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.session/: .context-cleared  session-2026-04-21-01.json  session-2026-04-22-01.json  session-2026-04-22-02.json  session-2026-04-22-03.json  session-2026-04-22-04.json  session-2026-04-22-05.json  session-2026-04-22-06.json  session-2026-04-22-07.json  session-2026-04-22-08.json  session-2026-04-22-09.json  session-2026-04-22-10.json  session-2026-04-23-01.json  session-2026-04-23-02.json  session-2026-04-23-03.json  session-2026-04-23-04.json  session-2026-04-23-05.json  session-2026-04-23-06.json  session-2026-04-23-07.json  (+28 more)
client/: README.md
(+2930 files in other folders)
